--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF9XVL_et8&#x2F;w5ylQb72BCTgSuO0FjHBFA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
+<div style="position: relative; width: 100%; padding-top: 56.2225%; margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;" src="https://www.canva.com/design/DAF9XVL_et8/w5ylQb72BCTgSuO0FjHBFA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF9XVL_et8&#x2F;w5ylQb72BCTgSuO0FjHBFA&#x2F;view?utm_content=DAF9XVL_et8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link">
+<a href="https://www.canva.com/design/DAF9XVL_et8/w5ylQb72BCTgSuO0FjHBFA/view?utm_content=DAF9XVL_et8&utm_campaign=designshare&utm_medium=embeds&utm_source=link">Ir a la página</a>
